# unified_assist

./: .gitignore  EXTENDING.md  IMPLEMENTATION_PLAN.md  README.md  memory_improve.md  pyproject.toml
docs/: memory-implementation.md
src/unified_assist/: __init__.py
src/unified_assist/agents/: __init__.py  definitions.py  forking.py  registry.py  runtime.py
src/unified_assist/app/: __init__.py  app_config.py  minimax_runner.py  session_engine.py
src/unified_assist/llm/: __init__.py  anthropic_adapter.py  base.py  minimax_adapter.py  openai_adapter.py  stream_parser.py
src/unified_assist/loop/: __init__.py  agent_loop.py  state.py  transitions.py
src/unified_assist/memory/: __init__.py  consolidator.py  extractor.py  freshness.py  manager.py  recall.py  sqlite_store.py  store.py  types.py
src/unified_assist/messages/: __init__.py  blocks.py  models.py  normalize.py
src/unified_assist/prompt/: __init__.py  builder.py  sections.py
src/unified_assist/runtime/: __init__.py  attachments.py  cancellation.py  events.py  services.py
src/unified_assist/skills/: __init__.py  bundled.py  hooks.py  loader.py  models.py  resolver.py
src/unified_assist/stability/: __init__.py  compaction.py  query_guard.py  recovery.py  (+3 more)
tests/: test_agents_and_runtime.py  test_builtin_tools.py  test_llm_adapters.py  test_loop_and_session.py  test_memory.py  test_messages_and_llm.py  test_minimax_runner.py  test_prompt.py  test_skills.py  test_stability.py  test_tool_port.py  test_tools_foundation.py  test_utils_and_config.py  test_web_and_lsp.py
unified_assist/: __init__.py
(+29 files in other folders)
